test/cli/test-mutating-policy/json-skips-errors/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
exceptions:
- exception.yaml
jsonPayloads:
- input.json
kind: Test
metadata:
  name: json-skips-errors
policies:
- policy.yaml
results:
- isMutatingPolicy: true
  kind: ""
  policy: excluded
  result: skip
- isMutatingPolicy: true
  kind: ""
  policy: exempted
  result: skip
- isMutatingPolicy: true
  kind: ""
  policy: missing-path
  result: error
- isMutatingPolicy: true
  kind: ""
  policy: test-rollback
  result: skip
